Refactored favorites to own store

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -1,6 +1,5 @@
-<!-- <div fxLayout="row wrap" fxLayoutGap="32px" fxLayoutAlign="center"> -->
 <ng-masonry-grid [masonryOptions]="{ transitionDuration: '0.2s', gutter: 10 }">
-  <ng-masonry-grid-item *ngFor="let event of eventsStoreService.events" >
+  <ng-masonry-grid-item *ngFor="let event of eventsStore.events" >
     <mat-card class="card">
       <mat-card-header>
         <mat-card-title>{{ event.title }}</mat-card-title>
@@ -17,14 +16,13 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button *ngIf="!(eventsStoreService.favorites$ | async).includes(event.id)" mat-stroked-button (click)="eventsStoreService.favorite(event)">
+        <button *ngIf="!(favoritesStore.favorites$ | async).includes(event.id)" mat-stroked-button (click)="favoritesStore.favorite(event)">
           <mat-icon class="icon">favorite_outline</mat-icon>
         </button>
-        <button *ngIf="(eventsStoreService.favorites$ | async).includes(event.id)" mat-stroked-button (click)="eventsStoreService.unfavorite(event)">
+        <button *ngIf="(favoritesStore.favorites$ | async).includes(event.id)" mat-stroked-button (click)="favoritesStore.unfavorite(event)">
           <mat-icon class="icon">favorite</mat-icon>
         </button>
       </mat-card-actions>
     </mat-card>
   </ng-masonry-grid-item>
 </ng-masonry-grid>
-<!-- </div> -->
