Added Favorites Component

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -10,6 +10,9 @@
       <a mat-list-item routerLink='/events'>
         <mat-icon class="icon">calendar_today</mat-icon>{{ 'NAVIGATION.EVENTS' | translate }}
       </a>
+      <a mat-list-item routerLink='/favorites'>
+        <mat-icon class="icon">star_rate</mat-icon>{{ 'NAVIGATION.FAVORITES' | translate }}
+      </a>
       <a mat-list-item routerLink='/locations'>
         <mat-icon class="icon">room</mat-icon>{{ 'NAVIGATION.LOCATIONS' | translate }}
       </a>
