--- a/src/app/components/favorites/favorites.component.html
+++ b/src/app/components/favorites/favorites.component.html
@@ -1,3 +1,6 @@
-<p>
-  favorites works!
-</p>
+<mat-list>
+  <mat-list-item *ngFor="let event of (eventsStore.favoriteEvents$ | async)">
+    <h4 mat-line>{{event.title}}</h4>
+    <p mat-line> {{event.id}} </p>
+  </mat-list-item>
+</mat-list>
