--- a/src/app/components/favorites/favorites.component.html
+++ b/src/app/components/favorites/favorites.component.html
@@ -1,6 +1,8 @@
-<mat-list>
-  <mat-list-item *ngFor="let event of (eventsStore.favoriteEvents$ | async)">
-    <h4 mat-line>{{event.title}}</h4>
-    <p mat-line> {{event.id}} </p>
-  </mat-list-item>
-</mat-list>
+<mat-nav-list>
+  <ng-container *ngFor="let event of (eventsStore.favoriteEvents$ | async)">
+    <a mat-list-item [routerLink]="['/events', event.id]">
+      <h4 mat-line>{{event.title}}</h4>
+      <p mat-line> {{event.id}} </p>
+    </a>
+  </ng-container>
+</mat-nav-list>
