Added translation for no favorites

--- a/src/app/components/favorites/favorites.component.html
+++ b/src/app/components/favorites/favorites.component.html
@@ -10,5 +10,5 @@
   </ng-container>
 </mat-nav-list>
 <ng-template #noFavoriteEventsRef>
-  <h1>Please select events</h1>
+  <p [innerHTML]="'FAVORITES_PAGE.NO_FAVORITE' | translate"></p>
 </ng-template>
