--- a/src/app/components/events/events.component.styl
+++ b/src/app/components/events/events.component.styl
@@ -1,5 +1,6 @@
 .card
   max-width 300px
   margin-bottom 5px
-  & > .mat-card-image
+  & .mat-card-image
     max-width none !important
+    margin-top 0
