--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -8,21 +8,35 @@
           </a>
         </mat-card-title>
         <mat-card-subtitle>
-          <!-- <a [routerLink]="['/locations', event.location.id]" class="unstyled-link">
-            {{ event.location.name }}
-          </a> -->
-          TODO: Location
+          {{ event['Referierende 1'] }}
+          <ng-container *ngIf="event['Referierende 2']">
+            <br>
+            {{ event['Referierende 2'] }}
+          </ng-container>
         </mat-card-subtitle>
       </mat-card-header>
-      <a *ngIf="event['Bild']" [routerLink]="['/events', event['ID']]">
+      <!-- <a *ngIf="event['Bild']" [routerLink]="['/events', event['ID']]">
         <img mat-card-image [src]="event['Bild']">
+      </a> -->
+      <a [routerLink]="['/events', event['ID']]">
+        <img mat-card-image [src]="'./assets/mock/257-540x360.jpg'">
       </a>
       <mat-card-content>
         <p>
-          {{ event['Beschreibung'] }}
+          {{ 'EVENTS_PAGE.TIME' | translate }}: <strong>{{ event['Zeitblock'] }}</strong>
+        </p>
+        <p><a [routerLink]="['/locations', 'friedenscamp']" class="unstyled-link">
+          {{ 'EVENTS_PAGE.LOCATION' | translate }}: <strong>TODO</strong>
+        </a></p>
+        <p *ngIf="event['Stichwort']">
+          {{ 'EVENTS_PAGE.CATEGORY' | translate }}: <strong>{{ event['Stichwort'] }}</strong>
         </p>
       </mat-card-content>
       <mat-card-actions>
+        <button mat-stroked-button class="details-button" [routerLink]="['/events', event['ID']]">
+          <mat-icon class="icon">more_horiz</mat-icon>{{ 'EVENTS_PAGE.DETAILS' | translate }}
+        </button>
+        <div fxFlex></div>
         <button *ngIf="!(favoritesStore.favorites$ | async).includes(event['ID'])" mat-stroked-button (click)="favoritesStore.favorite(event)">
           <mat-icon class="icon">favorite_outline</mat-icon>
         </button>
