--- a/src/app/components/events/events.component.styl
+++ b/src/app/components/events/events.component.styl
@@ -4,3 +4,8 @@
   & .mat-card-image
     max-width none !important
     margin-top 0
+  & .mat-card-content
+    margin-left 16px
+    margin-right 16px
+  & .details-button mat-icon.icon
+    margin-right 0.5rem
