Removed mat-card-image from image in events-details

--- a/src/app/components/events-details/events-details.component.html
+++ b/src/app/components/events-details/events-details.component.html
@@ -1,4 +1,4 @@
-<img mat-card-image *ngIf="event['Bild']" [src]="'./assets/' + event['Bild']">
+<img *ngIf="event['Bild']" [src]="'./assets/' + event['Bild']">
 
 <h1>{{ event['Titel'] }}</h1>
 
