Added Legal statement

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -19,6 +19,9 @@
       <a mat-list-item routerLink='/help'>
         <mat-icon class="icon">settings</mat-icon>{{ 'NAVIGATION.HELP' | translate }}
       </a>
+      <a mat-list-item routerLink='/legal'>
+        <mat-icon class="icon">copyright</mat-icon>{{ 'NAVIGATION.LEGAL' | translate }}
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
