Added Privacy statement

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -22,6 +22,9 @@
       <a mat-list-item routerLink='/legal'>
         <mat-icon class="icon">copyright</mat-icon>{{ 'NAVIGATION.LEGAL' | translate }}
       </a>
+      <a mat-list-item routerLink='/privacy'>
+        <mat-icon class="icon">assignment_ind</mat-icon>{{ 'NAVIGATION.PRIVACY' | translate }}
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
