Made image in nav list optional

--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,8 +1,8 @@
 <mat-nav-list>
   <ng-container *ngFor="let info of infos">
     <a mat-list-item [routerLink]="['/info', info.id]">
-      <img *ngIf="info.image" [src]="'./assets/' + info.image" height="35px">
-      <div class="mat-list-text mat-list-text-after-image">
+      <img *ngIf="info.image" class="nav-list-image" [src]="'./assets/' + info.image" height="35px">
+      <div class="mat-list-text">
         <span class="strong" mat-line [innerHtml]="('INFO_PAGE.' + info.translationKey + '.TITLE') | translate"></span>
         <span mat-line [innerHtml]="('INFO_PAGE.' + info.translationKey + '.SUBTITLE') | translate"></span>
       </div>
