--- a/src/app/components/help/help.component.html
+++ b/src/app/components/help/help.component.html
@@ -25,5 +25,11 @@
 <button mat-raised-button (click)="searchForUpdates()"
   [innerHTML]="'HELP_PAGE.APP_UPDATE.BUTTON_LABEL' | translate"></button>
 
+<h2 [innerHTML]="'HELP_PAGE.RESET.TITLE' | translate"></h2>
+<div [innerHTML]="'HELP_PAGE.RESET.CONTENT' | translate"></div>
+<button mat-raised-button (click)="reset()"
+  [innerHTML]="'HELP_PAGE.RESET.BUTTON_LABEL' | translate"></button>
+
+
 <h2 [innerHTML]="'HELP_PAGE.FEEDBACK.TITLE' | translate"></h2>
 <div [innerHTML]="'HELP_PAGE.FEEDBACK.CONTENT' | translate"></div>
