--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -7,11 +7,14 @@
         </a>
       </mat-card-title>
       <mat-card-subtitle>
-        {{ event['Referierende 1'] }}
+        <a [routerLink]="['/locations', event['Ort ID']]" class="unstyled-link">
+          {{ event['Ort'] }}
+        </a>
+        <!-- {{ event['Referierende 1'] }}
         <ng-container *ngIf="event['Referierende 2']">
           <br>
           {{ event['Referierende 2'] }}
-        </ng-container>
+        </ng-container> -->
       </mat-card-subtitle>
     </mat-card-header>
     <a *ngIf="event['Bild']" [routerLink]="['/events', event['ID']]" class="mat-card-image-link">
@@ -19,13 +22,22 @@
     </a>
     <mat-card-content>
       <p>
-        {{ 'EVENTS_PAGE.TIME' | translate }}: <strong>{{ event['Tag'] }}</strong> - <strong>{{ event['Zeitblock'] }}</strong>
+        <strong>
+          <span *ngIf="event['Tag'] === '24.6.'">{{ 'EVENTS_PAGE.WEEKDAYS.MO' | translate }}, </span>
+          <span *ngIf="event['Tag'] === '25.6.'">{{ 'EVENTS_PAGE.WEEKDAYS.TU' | translate }}, </span>
+          <span *ngIf="event['Tag'] === '26.6.'">{{ 'EVENTS_PAGE.WEEKDAYS.WE' | translate }}, </span>
+          <span *ngIf="event['Tag'] === '27.6.'">{{ 'EVENTS_PAGE.WEEKDAYS.TH' | translate }}, </span>
+          <span *ngIf="event['Tag'] === '28.6.'">{{ 'EVENTS_PAGE.WEEKDAYS.FR' | translate }}, </span>
+          <span *ngIf="event['Tag'] === '29.6.'">{{ 'EVENTS_PAGE.WEEKDAYS.SA' | translate }}, </span>
+          {{ event['Tag'] }}
+        </strong>
+        <ng-container *ngIf="event['Startzeit']">
+          {{ event['Startzeit'] }} - {{ event['Endzeit'] }}
+        </ng-container>
       </p>
-      <p><a [routerLink]="['/locations', 'friedenscamp']" class="unstyled-link">
-        {{ 'EVENTS_PAGE.LOCATION' | translate }}: <strong>TODO</strong>
-      </a></p>
       <p *ngIf="event['Stichwort']">
-        {{ 'EVENTS_PAGE.CATEGORY' | translate }}: <strong>{{ event['Stichwort'] }}</strong>
+        {{ 'EVENTS_PAGE.CATEGORY' | translate }}:
+        <strong>{{ 'EVENTS_PAGE.CATEGORIES.' + event['Stichwort'] | translate }}</strong>
       </p>
     </mat-card-content>
     <mat-card-actions>
