Added back button

--- a/src/app/components/events-details/events-details.component.html
+++ b/src/app/components/events-details/events-details.component.html
@@ -66,3 +66,8 @@
   </ng-container>
 </ng-container>
 
+<button mat-button class="back-button" (click)="backToList()">
+  <mat-icon class="icon">arrow_back_ios</mat-icon>
+  {{ 'EVENTS_PAGE.BACK_BUTTON_LABEL' | translate }}
+</button>
+
